<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#273746"
    tools:context=".agricultureloan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="8sp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/al1"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/al2"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/al3"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/al4"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/al5"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/al6"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/al7"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/al8"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/al9"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/al10"
            android:textColor="#ffffff"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/al11"
            android:textSize="24dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold|italic"
            android:textColor="#ffffff"
            />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dp"
            android:text="@string/al12"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/apply3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="#52F187"
            android:text="APPLY FOR THE LOAN"
            android:textStyle="bold|italic"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>