<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#273746"
    tools:context=".croploan">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="8sp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc1"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc2"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc3"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc4"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc5"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc6"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc7"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc8"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc9"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc10"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc11"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc12"
                android:textColor="#ffffff"
                />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kcc13"
                android:textSize="24dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold|italic"
                android:textColor="#ffffff"
                />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:text="@string/kcc14"
                android:textColor="#ffffff"
                />
            <Button
                android:id="@+id/apply2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#52F187"
                android:layout_marginBottom="20dp"
                android:text="APPLY FOR THE LOAN"
                android:textStyle="bold|italic"
                android:paddingHorizontal="8dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>