<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".userprofile">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#567AE7"
        android:padding="10sp"
        android:text="@string/profile"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10sp"
        android:text="@string/full_name"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10sp"
        android:background="#ffffff"
        android:ems="10"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10sp"
        android:text="@string/city"
        android:textColor="#ffffff"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/city"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:singleLine="true"
        android:padding="8dp"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10sp"
        android:text="@string/father_name"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fname"
        app:layout_constraintTop_toBottomOf="@+id/fname" />


    <EditText
        android:id="@+id/faname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10sp"
        android:text="@string/mother_name"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/faname"
        app:layout_constraintTop_toBottomOf="@+id/faname" />

    <EditText
        android:id="@+id/mname"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10sp"
        android:text="@string/pin_code"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/city"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <EditText
        android:id="@+id/citycode"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:singleLine="true"
        android:inputType="phone"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10sp"
        android:text="@string/address"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/citycode"
        app:layout_constraintTop_toBottomOf="@+id/citycode" />

    <EditText
        android:id="@+id/address"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10sp"
        android:text="@string/mobile_no"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/mobno"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="phone"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/text4"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="10sp"
        android:text="@string/date_of_birth"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mname"
        app:layout_constraintTop_toBottomOf="@+id/mname" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="phone"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text5" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="UPDATE"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dob"
        app:layout_constraintStart_toStartOf="@+id/dob"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="@+id/mobno"
        app:layout_constraintStart_toStartOf="@+id/mobno"
        app:layout_constraintTop_toBottomOf="@+id/mobno" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="119dp"
        android:layout_height="105dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/usericon" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="10sp"
        android:text="user email ID"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/useremailid"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="10sp"
        android:textStyle="bold|italic"
        android:singleLine="true"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/city"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>